# LLMDataForge

./: .gitignore  README.md  pyproject.toml
data-generator/: app.py
data-generator/config/: mistral_config.json
data-generator/data_filter/: __init__.py  filter.py
data-generator/data_filter/dataset_handlers/: __init__.py  classification_dataset_handler.py  dataset_handler.py  dataset_handler_factory.py  dataset_summary.py
data-generator/data_filter/filters/: __init__.py  filter.py  filter_characters.py  filter_custom_emotion_task.py  filter_distinguish.py  filter_downstream_task.py  filter_factory.py  filter_hashtags.py  filter_labels.py  filter_llm_solve.py  filter_multiple_lines.py  filter_similar_embeddings.py  filter_spaces.py  filter_substrings.py  isolate_samples_filter.py  similar_samples_filter.py
data-generator/data_filter/filters/utils/: string_similarity_metrices.py
data-generator/data_generator/: __init__.py  generator.py
data-generator/data_generator/additional_data_generator/: __init__.py  additional_data_generator.py  additional_data_generator_factory.py  common_emotional_words_generator.py  common_emotional_words_generator2.py  common_words_generator.py
data-generator/data_generator/llm_adapters/: LLM_adapter.py  LLM_adapter_factory.py  __init__.py  mediusGPT_adapter.py  mistral_adapter copy.py  mistral_adapter.py
data-generator/data_generator/sample_generators/: __init__.py  classification_sample_generator.py  sample_generator.py  sample_generator_factory.py
(+5 files in other folders)
